--- a/index.release.html
+++ b/index.release.html
@@ -37,8 +37,7 @@
         </md-input-container>
     </section>
 
-    <script type="text/javascript" src="./bower_components/angular/angular.js"></script>
-    <!-- // <script type="text/javascript" src="bower_components/angular/angular.min.js"></script> -->
+    <script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="./bower_components/angular-animate/angular-animate.min.js"></script>
     <script type="text/javascript" src="./bower_components/angular-aria/angular-aria.min.js"></script>
     <script type="text/javascript" src="./bower_components/angular-material/angular-material.min.js"></script>
