--- a/index.release.html
+++ b/index.release.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="./bower_components/angular-material/angular-material.min.css" />
     <link rel="stylesheet" type="text/css" href="./bower_components/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/app.min.css" />
 </head>
 
 <body ng-controller="mainCtrl">
