made the JSON view use a monospaced font family

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
     <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="json-view">
         <md-input-container layout="column" flex>
-            <textarea ng-model="data.tree.json" aria-label="JSON format" disabled></textarea>
+            <textarea class="json-view" ng-model="data.tree.json" aria-label="JSON format" disabled></textarea>
         </md-input-container>
     </md-sidenav>
 
