--- a/index.release.html
+++ b/index.release.html
@@ -35,8 +35,8 @@
         </md-container>
     </section>
     <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="json-view">
-        <md-input-container layout="column" flex>
-            <textarea ng-model="data.tree.json" aria-label="JSON format" disabled></textarea>
+        <md-input-container layout="column">
+            <textarea class="json-view" ng-model="data.tree.json" aria-label="JSON format" md-sidenav-focus disabled></textarea>
         </md-input-container>
     </md-sidenav>
 
