--- a/src/js/Main/loadJson.template.html
+++ b/src/js/Main/loadJson.template.html
@@ -10,17 +10,17 @@
     <div>
       <md-input-container layout-fill>
         <label>JSON Data</label>
-        <textarea ng-model="data.json"></textarea>
+        <textarea ng-model="$ctrl.data.json"></textarea>
       </md-input-container>
     </div>
   </md-dialog-content>
   
   <md-dialog-actions layout="row">
     <span flex></span>
-    <md-button ng-click="cancel()" class="md-primary">
+    <md-button ng-click="$ctrl.cancel()">
       Cancel
     </md-button>
-    <md-button ng-click="load()" class="md-primary">
+    <md-button ng-click="$ctrl.load()" class="md-primary">
       Load JSON Data
     </md-button>
   </md-dialog-actions>
