--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="dist/main.js"></script>
 </head>
 
 <body ng-app="dv-sptm" ng-strict-di>
